third_party/move/move-compiler-v2/tests/bytecode-generator/bug_16543.move
module 0xc0ffee::m {
    struct Lazy(||) has drop;

}

module 0xc0ffee::n {
    public fun test(): 0xc0ffee::m::Lazy {
        || {}
    }
}
